[workspace]
resolver = "2"
members = [
    'api',
    'cli',
    'lib',
    'lib-interface',
    'rpc',
    'rpc-client',
    'program',
    'program-macro',
]

[workspace.dependencies]
solana-clap-utils = "=1.17.28"
solana-cli = "=1.17.28"
solana-cli-config = "=1.17.28"
solana-client = "=1.17.28"
solana-program = { version = "=1.17.28", default-features = false }
solana-sdk = "=1.17.28"
solana-program-runtime = "=1.17.28"
solana-runtime = "=1.17.28"
solana-accounts-db = "=1.17.28"