[workspace]
resolver = "2"
members = [
    'api',
    'cli',
    'lib',
    'lib-interface',
    'rpc',
    'rpc-client',
    'program',
    'program-macro',
]

[workspace.dependencies]
solana-clap-utils = "=1.17.31"
solana-cli = "=1.17.31"
solana-cli-config = "=1.17.31"
solana-client = "=1.17.31"
solana-program = { version = "=1.17.31", default-features = false }
solana-sdk = "=1.17.31"
solana-program-runtime = "=1.17.31"
solana-runtime = "=1.17.31"
solana-accounts-db = "=1.17.31"
