[package]
name = "neon-lib-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
thiserror = "1"
async-ffi = { version = "0.4.1", features = ["abi_stable"] }
serde = "1.0.147"
serde_json = "1.0.85"
