[package]
name = "neon-rpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
serde_json = "1.0.107"
jsonrpc-v2 = "0.13.0"
neon-lib = { path = "../lib" }
thiserror = "1.0.49"
async-trait = "0.1.74"
jsonrpsee-core = "0.20.2"
jsonrpsee-http-client = "0.20.2"
jsonrpsee-types = "0.20.2"
tokio = { version = "1", features = ["full"] }
build-info = { version = "0.0.31", features = ["serde"] }
